# template_cpp

./: .clang-format  CMakeLists.txt  README.md
include/hello/: hello.h
src/: main.cpp
src/hello/: hello.cpp
